--- a/template/home.html
+++ b/template/home.html
@@ -9,10 +9,10 @@
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f0f0f0;
+      background-color: #0b0b0b;
     }
     header {
-      background-color: #333;
+      background-color: #1b1f4a;
       color: #fff;
       padding: 20px;
       text-align: center;
@@ -54,7 +54,7 @@
     .user-card a {
       display: block;
       text-decoration: none;
-      color: #333;
+      color: #3790e9a8;
     }
     .user-card img {
       width: 100px;
@@ -71,7 +71,7 @@
     }
     /* Additional styles for search bar */
     .search-bar {
-      background-color: #f8f8f8;
+      background-color: #0b051bc3;
       padding: 10px;
       display: flex;
       align-items: center;
