--- a/template/home.html
+++ b/template/home.html
@@ -106,7 +106,9 @@
       <a href="{% url 'register' %}">Register</a>
       {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'edit_profile' %}">Edit Profile</a>
         <a href="{% url 'upload' %}">Upload Project</a>
+        
       {% else %}
         <a href="{% url 'login' %}">Login</a>
       {% endif %}
