--- a/template/user_profile.html
+++ b/template/user_profile.html
@@ -96,6 +96,12 @@
         transform: translateY(0);
       }
     }
+    .no-access-message {
+  font-size: 14px;
+  color: #FF0000; /* Red color for error message */
+  margin-top: 10px;
+}
+
   </style>
 </head>
 <body>
@@ -105,6 +111,7 @@
       {% if user.is_authenticated %}
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'register' %}">Register</a>
+        
       {% else %}
         <a href="{% url 'login' %}">Login</a>
         <a href="{% url 'home' %}">Home</a>
@@ -129,8 +136,18 @@
                 Your browser does not support the video tag.
               </video>
               <a href="{{ project.source_code_link }}" class="source-code-link">Source Code</a>
+              {% if user.is_authenticated %}
+                {% if user == project.user %}
+                  <form method="post" action="{% url 'delete_project' project.id %}">
+                    {% csrf_token %}
+                    <button type="submit" class="delete-button">Delete</button>
+                  </form>
+                {% else %}
+                  <p>You don't have permission to delete this project.</p>
+                {% endif %}
+              {% endif %}
             </div>
-          </li>
+          </li>          
         {% endfor %}
       </ul>
     </div>
